--- a/booknotes-frontend/src/style.css
+++ b/booknotes-frontend/src/style.css
@@ -5,14 +5,14 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0px;
   padding: 0px;
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .App {
   background-color: #e9ecef;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .error {
@@ -111,7 +111,6 @@ html, body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 15px;
-  margin: 15px;
 }
 
 .book-card {
