--- a/booknotes-frontend/src/style/_base.sass
+++ b/booknotes-frontend/src/style/_base.sass
@@ -5,14 +5,14 @@ html, body
   -moz-osx-font-smoothing: grayscale
   margin: 0px
   padding: 0px
-  min-height: 100vh
+  height: 100%
   display: flex
   flex-direction: column
 
 
 .App
   background-color: #e9ecef
-  height: 100vh
+  min-height: 100vh
 
 .error
   margin: 0px
