--- a/booknotes-frontend/src/style/_books.sass
+++ b/booknotes-frontend/src/style/_books.sass
@@ -7,7 +7,7 @@
   display: grid
   background-color: white
   grid-template-columns: 1fr
-  grid-template-rows: 50px auto 40px
+  grid-template-rows: auto auto auto
   border-radius: 10px
   border-left: 10px solid black
   .title
